Adjust top margin to avoid large whitespace

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -187,7 +187,7 @@ h6 {
 #colour,
 #typography,
 #buttons {
-  margin: 10% 10% 5% 15%;
+  margin: 5% 10% 0 15%;
   width: 60%;
   padding-top: 3%;
 }
